<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_main_bottom_margin">

            <fragment
                android:id="@+id/modules_fragment"
                android:name="com.vadimmelnicuk.wmgdsm.FragmentModules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/modules_fragment" >

                <Button
                    android:id="@+id/session_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_start_session" />

                <TextView
                    android:id="@+id/session_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentRight="true"
                    android:textSize="12dp"
                    android:layout_toRightOf="@+id/session_control"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <fragment
                android:id="@+id/fragment_empaticae4"
                android:name="com.vadimmelnicuk.wmgdsm.FragmentEmpaticaE4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/session" />

            <fragment
                android:id="@+id/fragment_polarh7"
                android:name="com.vadimmelnicuk.wmgdsm.FragmentPolarH7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/fragment_empaticae4" />

            <fragment
                android:id="@+id/fragment_affectiva"
                android:name="com.vadimmelnicuk.wmgdsm.FragmentAffectiva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/fragment_polarh7" />

            <SurfaceView
                android:id="@+id/camera_view"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/fragment_affectiva" />

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/footer"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/footer"
            android:textSize="12dp"
            android:textColor="@color/primary_dark_material_light" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/button_reset" />

    </RelativeLayout>

</RelativeLayout>